chore: Docker周りを改善
- Dockerfile
  - COPY命令をやめて、マウントだけでファイルを同期するように変更（それに伴い.dockerignoreも削除）
  - レイヤー統合
  - 不要になったget-pip-pyを削除するように
  - fontforgeのバージョン名が変わってたのでワイルドカードをつけて修正
- makeでdockerコマンドを呼び出せるように

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
-version: "3"
 services:
-    builder:
-        build: .
-        container_name: hackgen-y
-        volumes:
-            - .:/src
+  main:
+    build: .
+    container_name: hackgen-y
+    volumes:
+        - .:/src
